--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
+    "@solana-mobile/wallet-adapter-mobile": "^0.9.8",
+    "@solana/wallet-adapter-base": "^0.9.18",
+    "@solana/wallet-adapter-react": "^0.15.24",
+    "@solana/wallet-adapter-react-ui": "^0.9.22",
+    "@solana/wallet-adapter-wallets": "^0.19.5",
+    "@solana/web3.js": "^1.66.2",
+    "@web3uikit/core": "^0.2.10",
+    "axios": "^1.1.3",
+    "bs58": "^5.0.0",
+    "dotenv": "^16.0.3",
+    "moralis": "^2.7.1",
     "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next-auth": "^4.16.4"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
